tests/baselines/reference/invalidBooleanAssignments.errors.txt
==== tests/cases/conformance/types/primitives/boolean/invalidBooleanAssignments.ts (10 errors) ====
    var x = true;
    
    var a: number = x;
        ~
!!! error TS2323: Type 'boolean' is not assignable to type 'number'.
    var b: string = x;
        ~
!!! error TS2323: Type 'boolean' is not assignable to type 'string'.
    var c: void = x;
        ~
!!! error TS2323: Type 'boolean' is not assignable to type 'void'.
    var d: typeof undefined = x;
    
    enum E { A }
    var e: E = x;
        ~
!!! error TS2323: Type 'boolean' is not assignable to type 'E'.
    
    class C { foo: string }
    var f: C = x;
        ~
!!! error TS2322: Type 'boolean' is not assignable to type 'C':
!!! error TS2322:   Property 'foo' is missing in type 'Boolean'.
    
    interface I { bar: string }
    var g: I = x;
        ~
!!! error TS2322: Type 'boolean' is not assignable to type 'I':
!!! error TS2322:   Property 'bar' is missing in type 'Boolean'.
    
    var h: { (): string } = x;
        ~
!!! error TS2323: Type 'boolean' is not assignable to type '() => string'.
    var h2: { toString(): string } = x; // no error
    
    module M { export var a = 1; }
    M = x;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    function i<T>(a: T) {
        a = x;
        ~
!!! error TS2323: Type 'boolean' is not assignable to type 'T'.
    }
    i = x;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.